Fix stickyGroupRows horizontal scrolling in combination with locked columns and expandGroupTitle

--- a/community-edition/style/base.scss
+++ b/community-edition/style/base.scss
@@ -796,6 +796,10 @@
   flex-flow: row;
 }
 
+.InovuaReactDataGrid__locked-row-group--locked-end {
+  position: absolute;
+  left: 0px;
+}
 .InovuaReactDataGrid__footer-row-group--locked-end {
   position: absolute;
   left: 0;
